--- a/developer_tools/docker/images/python310-cuda/Dockerfile
+++ b/developer_tools/docker/images/python310-cuda/Dockerfile
@@ -1,8 +1,21 @@
-ENTRYPOINT["/bin/bash"]
+ENTRYPOINT ["/bin/bash"]
 FROM python:3.10
 
 # Set the environment variable to non-interactive
 ENV DEBIAN_FRONTEND=noninteractive
+
+#######################################################################################
+# Obtaining CERN rf-noise-cpp
+#######################################################################################
+# requires read api token !
+# 1. obtained token at https://gitlab.cern.ch/-/user_settings/personal_access_tokens
+# 2. export GITLAB_READ_TOKEN=<YOUR-TOKEN>
+# 3. Build your docker container
+RUN --mount=type=secret,id=gitlab_token \
+    GITLAB_READ_TOKEN=$(cat /run/secrets/gitlab_token) && \
+    git clone https://oauth2:$GITLAB_READ_TOKEN@gitlab.cern.ch/be-rf-cs/Tools-and-libs/rf-noise-cpp.git/ /usr/local/rf-noise-cpp
+ENV RF_NOISE_DIR=/usr/local/rf-noise-cpp
+#######################################################################################
 
 RUN apt-get update && \
     apt-get install -y gcc g++  build-essential mpich libmpich-dev
@@ -12,7 +25,6 @@ RUN wget https://developer.download.nvidia.com/compute/cuda/repos/debian12/x86_6
     apt-get update && \
     apt-get install -y cuda-toolkit && \
     rm -rf /var/lib/apt/lists/*
-
 # Make sure NVCC is accessible
 ENV CUDA_HOME=/usr/local/cuda
 ENV PATH=${CUDA_HOME}/bin:${PATH}
