Fixed test_bmath, fixed bugs in bmath_backends.py, initializing GPU backend on startup now (using set(self, _gpu_num=0))

--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,10 @@ doc =
     sphinxcontrib-napoleon
     sphinx-autopackagesummary
     pyqt5
+gpu =
+    cupy
+multinode =
+    mpi4py
 all = 
     %(test)s
     %(doc)s
