--- a/.coveragerc
+++ b/.coveragerc
@@ -14,6 +14,7 @@ omit =
     *.h
     *.cu
     blond/compile.py
+    blond/_version.py
     blond/sanity_check.py
     blond/gpu/*
     blond/utils/butils_wrap_numba.py
