Added RUFF as pre-commit hook

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,8 +54,12 @@ write_to = 'blond/_version.py' # autogenerates version string using git
 dependencies = { file = ["requirements.txt"] }
 optional-dependencies = { all = { file = ["requirements-doc.txt","requirements-lint.txt","requirements-test.txt","requirements-gpu.txt", "requirements-dev.txt"] }, gpu = { file = ["requirements-gpu.txt"] }, doc = { file = ["requirements-doc.txt"] }, lint = { file = ["requirements-lint.txt"] }, test = { file = ["requirements-test.txt"] } , dev = { file = ["requirements-dev.txt"] }}
 
+
 [tool.ruff]
 line-length = 79
+
+[tool.ruff.lint]
+ignore = ["E741"] # https://docs.astral.sh/ruff/rules/ambiguous-variable-name/
 
 [tool.pylint.reports]
 output-format = 'colorized'
